	PR c++/12132 	* parser.c (cp_parser_explicit_instantiation): Improve error 	recovery. 	(cp_parser_require): Improve indication of the error location.

PR c++/12132
	* g++.dg/template/error11.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@75441 138bc75d-0d04-0410-961f-82ee72b054a4