gcc/testsuite/g++.dg/template/error11.C
@@ -1,0 +1,4 @@
+// PR c++/12132
+
+inline template <int> void foo () {} // { dg-error "<" }
+void abort (); // { dg-error ";" }
